[project]
name = "nicegui-breitbandmessung-visualisierung"
version = "1.0.0"
description = "Visualisierung von Breitbandmessungsdaten mit NiceGUI"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "nicegui>=2.4.0",
    "pyyaml>=6.0.1",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "python-dateutil>=2.8.2",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
